# configurator

./: Makefile.am  README.md  configure.ac
src/: .gitignore  Makefile.am  __init__.py  apps.xml  confgen-be.in  confgen-fe.in  confgen.in  confgen.py  datamodel.py  difs.xml  emulab_support.py  nodes.xml  rina-confgen.in  temp.py
src/inputs/: Makefile.am  difs.xml  ipcps.xml  temp.xml  topology.xml  vwall.ini
src/inputs/2nodes/: default.dif  difs.xml
src/inputs/abilene/: Makefile.am  difs.xml  ipcps.xml  topology.xml  vwall.ini
src/inputs/datnet/: Makefile.am  difs.xml  ipcps.xml  topology.xml  vwall.ini
src/inputs/distcloud/: Makefile.am  difs.xml  ipcps.xml  topology.xml  vwall.ini
src/inputs/networkop/: Makefile.am  apps.xml  difs.xml  ipcps.xml  topology.xml  vwall.ini
