#
# Makefile.am
#
# Written by: Sander Vrijders <sander DOT vrijders AT intec DOT ugent DOT be>
#

SUBDIRS                            =
EXTRA_DIST                         =
DISTCLEANFILES                     =
bin_PROGRAMS                       =
bin_SCRIPTS                        =
AM_INSTALLCHECK_STD_OPTIONS_EXEMPT =

EXTRA_DIST += apps.xml ipcps.xml topology.xml difs.xml vwall.ini
